# D-HNSW_optim

./: .gitignore  Cargo.toml
benches/: ablation_benchmark.rs  batch_insertion_benchmark.rs  cross_arch_verification.rs  cross_platform_determinism.rs  llm_embedding_benchmark.rs  paper_data_generator.rs  real_dataset_benchmark.rs
examples/: arm64_verify.rs  crossplatform_verify.rs  multi_dataset_verify.rs
research_context/: archive_analysis_report.md  archive_project_summary.md  dhnsw_comprehensive_analysis.md  literature-review-deterministic-hnsw-literature-20260418-104248.md  log.jsonl  tree.yaml
scripts/: ci_cross_platform.yml  compile_latex.py  cross_platform_test.sh  generate_figures.py  run_large_scale_benchmark.py
shared/: D_HNSW_Full_Manuscript_IEEE.md  HUONG_DAN_BIEN_DICH.md  ablation_study_design.md  benchmark_and_testing_design.md  compile_latex.py  dhnsw_master_report.md  experiment_protocol.md  final_comprehensive_report.md  fixes_changelog.md  formal_error_bounds.md  gap_analysis_for_paper.md  main_tex_final.tex  main_tex_final_audited.aux  main_tex_final_audited.bbl  main_tex_final_audited.blg  main_tex_final_audited.out  main_tex_final_audited.tex  main_tex_final_audited.tex.backup  main_tex_final_audited.tex.bak  main_tex_final_audited_1.tex  main_tex_final_audited_2.tex  main_tex_fixed.tex  optimization_designs.md  paper_audit_report.md  qualitative_comparison.md  references.bib  section3_trilemma_rewrite.md  workspace_analysis_report.md  workspace_extraction_report.md
shared/benches/: ablation_benchmark.rs
shared/dhnsw-artifact/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  experiment_results.txt  experiment_results_v2.txt
shared/dhnsw-artifact/benches/: ablation_benchmark.rs  cross_arch_verification.rs  recall_benchmark.rs
shared/dhnsw-artifact/experiments/: generate_plots.py  run_performance_benchmark.py  run_recall_benchmark.py
shared/dhnsw-artifact/scripts/: cross_platform_verify.sh  run_all.sh
shared/dhnsw-artifact/src/: deterministic_rng.rs  fixed_point.rs  graph.rs  lib.rs  main.rs
shared/dhnsw-artifact/tests/: determinism_tests.rs
shared/experiment_code/: generate_new_plots.py  generate_plots.py  run_experiments.py  run_llm_embeddings.py  run_real_dhnsw.py
shared/experiment_results/: ablation_results.json  benchmark_results.json  comparison_results.json  crossplatform_verification.json  determinism_verification.json  error_analysis.json  error_analysis_fixed.json  gist_component_benchmark.txt  real_i64f32_search.json  scalability_results.json  sift_component_benchmark.txt  two_phase_search.json
shared/output/: main_tex_final_audited.aux  main_tex_final_audited.bbl  (+2 more)
src/: batch.rs  deterministic_rng.rs  error.rs  fixed_point.rs  graph.rs  lib.rs  quantization.rs  simd.rs
(+16 files in other folders)
